Playing with including categories in search results.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
       searchInput: document.getElementById('search-input'),
       resultsContainer: document.getElementById('results-container'),
       json: '{{ site.baseurl }}/search.json',
-      searchResultTemplate: '<li><a href={url}>{title}</a></li>',
+      searchResultTemplate: '<li><a href={url}>{title}({categories})</a></li>',
       noResultsText: 'No results found.',
       fuzzy: false,
       limit: 100,
