Created subfolders element, to display subfolders for each folder.

--- a/_includes/folder-contents.html
+++ b/_includes/folder-contents.html
@@ -1,8 +1,26 @@
+<!-- Start by building content to be displayed on the page -->
+{% assign sortedlist = site.html_pages | sort_natural: 'url' %}
+{% assign num_content_items = 0 %}
+{% capture my_content_list %}{% endcapture %}
+
+{% for sortedpage in sortedlist %}
+  {% if sortedpage.location == page.location and sortedpage.url != page.url %}
+    {% assign num_content_items = num_content_items | plus: 1 %}
+    {% capture my_content_list %}{{ my_content_list }}
+      <li><a href="{{ sortedpage.url }}">{{ sortedpage.url | replace: '/', ' ' | split:' ' | last | replace: '-', ' '  | remove: '.html' }}</a></li>
+    {% endcapture %}
+  {% endif %}
+{% endfor %}
+
+{% unless num_content_items == 0 %}
+    {% capture content_list_heading %}<h3>Pages:</h3>{% endcapture %}
+{% endunless %}
+
+<!-- This is the actual content displayed on the page -->
+{% include subfolders.html %}
+
+{{ content_list_heading }}
+
 <ul id="folder-contents">
-    {% assign sortedlist = site.html_pages | sort_natural: 'url' %}
-    {% for sortedpage in sortedlist %}
-      {% if sortedpage.location == page.location and sortedpage.url != page.url %}
-        <li><a href="{{ sortedpage.url }}">{{ sortedpage.url | replace: '/', ' ' | split:' ' | last | replace: '-', ' '  | remove: '.html' }}</a></li>
-      {% endif %}
-    {% endfor %}
-  </ul>
+  {{ my_content_list }}
+</ul>
