--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
       {% for page in sortedlist %}
         {% if page.url == "/" %}
           <li><a href="{{ page.url }}">Home</a></li>
-        {% elsif page.url contains "pages/" %}
+        {% elsif page.url contains "pages" %}
           <li><a href="{{ page.url }}">{{ page.url | replace: '/', ' ' | split:' ' | last | replace: '-', ' '  | remove: '.html' }}</a></li>
         {% endif %}
       {% endfor %}
