--- a/_includes/recursive-subfolders.html
+++ b/_includes/recursive-subfolders.html
@@ -1,10 +1,9 @@
 {% assign all_content = site.html_pages | concat: site.posts %}
 {% assign sortedlist = all_content | sort_natural: 'url' %}
 
-<!-- First we find out whether there are any subfolders at this level -->
+{% comment %} First we find out whether there are any subfolders at this level {% endcomment %}
 {% assign num_items = 0 %}
-{% assign folderdepth = include.parentlocation | split: "/" | size %}
-{% assign next_level = folderdepth | plus: 1 %}
+{% assign next_level = include.parentdepth | plus: 1 %}
 {% for sortedpage in sortedlist %}
   {% assign subfolderdepth = sortedpage.location | split: "/" | size %}
   {% if sortedpage.location contains include.parentlocation and subfolderdepth == next_level and sortedpage.url != include.parenturl %}
@@ -12,19 +11,19 @@
   {% endif %}
 {% endfor %}
 
-<!-- Now if we know there are some subfolders, we can build up the bullet list. -->
+{% comment %} Now if we know there are some subfolders, we can build up the bullet list. {% endcomment %}
 {% unless num_items == 0 %}
   <ul>      
     {% for sortedpage in sortedlist %}
-      <!-- recursion means we have to keep reassigning folderpath and next_level -->
-      {% assign folderdepth = include.parentlocation | split: "/" | size %}
-      {% assign next_level = folderdepth | plus: 1 %}
+    {% comment %} recursion means we have to keep reassigning folderpath and next_level {% endcomment %}
+      {% assign next_level = include.parentdepth | plus: 1 %}
       {% assign subfolderdepth = sortedpage.location | split: "/" | size %}
 
       {% if sortedpage.location contains include.parentlocation and subfolderdepth == next_level and sortedpage.url != include.parenturl %}
         <li><a href="{{ sortedpage.url }}">{{ sortedpage.url | replace: '/', ' ' | split:' ' | last | replace: '-', ' '  | remove: '.html' }}</a></li>
         {% if sortedpage.folderlist == true %}
-          {% include recursive-subfolders.html parentlocation=sortedpage.location parenturl=sortedpage.url %}
+          {% assign new_parentdepth = sortedpage.location | split: "/" | size %}
+          {% include recursive-subfolders.html parentlocation=sortedpage.location parenturl=sortedpage.url parentdepth=new_parentdepth %}
         {% endif %}
       {% endif %}
 
