--- a/_includes/sitemap.html
+++ b/_includes/sitemap.html
@@ -1,3 +1,3 @@
 <ul id="subfolders">
-  {% include recursive-subfolders.html parentlocation=page.location parenturl=page.url %} 
+  {% include recursive-subfolders.html parentlocation=page.location parenturl=page.url parentdepth=1 %} 
 </ul>
