Fix problem where all files in all subfolders were displayed at all levels.

--- a/_includes/folder-contents.html
+++ b/_includes/folder-contents.html
@@ -4,8 +4,11 @@
 {% assign num_content_items = 0 %}
 {% capture my_content_list %}{% endcapture %}
 
+{% assign folderdepth = page.location | split: "/" | size %}
+{% assign next_level = folderdepth | plus: 1 %}
 {% for sortedpage in sortedlist %}
-  {% if sortedpage.location contains page.location and sortedpage.url != page.url %}
+  {% assign subfolderdepth = sortedpage.location | split: "/" | size %}
+  {% if sortedpage.location contains page.location and subfolderdepth == next_level and sortedpage.url != page.url %}
     {% assign num_content_items = num_content_items | plus: 1 %}
     {% capture my_content_list %}{{ my_content_list }}
       <li><a href="{{ sortedpage.url }}">{{ sortedpage.url | replace: '/', ' ' | split:' ' | last | replace: '-', ' '  | remove: '.html' }}</a></li>
@@ -19,9 +22,7 @@
 
 {% comment %} This is the actual content displayed on the page {% endcomment %}
 {% include subfolders.html %}
-
 {{ content_list_heading }}
-
 <ul id="folder-contents">
   {{ my_content_list }}
 </ul>
