Only display links top right if they are marked as sitelist pages, and only have five of them.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,11 +12,16 @@
     <ul id="results-container">
     </ul>
     <ul id="index">
+      {% assign num_items_shown = 0 %}
       {% assign sortedlist = site.html_pages | sort_natural: 'url' %}
       {% for page in sortedlist %}
-        {% if page.url == "/" %}
+        {% if num_items >= 5 %}
+          {% continue %}
+        {% elsif page.url == "/" %}
+          {% assign num_items = num_items | plus: 1 %}
           <li><a href="{{ page.url }}">Home</a></li>
-        {% elsif page.url contains "pages" %}
+        {% elsif page.sitelist == true %}
+          {% assign num_items = num_items | plus: 1 %}
           <li><a href="{{ page.url }}">{{ page.url | replace: '/', ' ' | split:' ' | last | replace: '-', ' '  | remove: '.html' }}</a></li>
         {% endif %}
       {% endfor %}
