--- a/_includes/leafless-recursive-subfolders.html
+++ b/_includes/leafless-recursive-subfolders.html
@@ -20,7 +20,8 @@
       {% assign subfolderdepth = sortedpage.location | split: "/" | size %}
 
       {% if sortedpage.location contains include.parentlocation and subfolderdepth == next_level and sortedpage.url != include.parenturl %}
-        {% assign dont_show_link = (include.leafless and !sortedpage.folderlist) %}
+        {% assign dont_show_link = (!sortedpage.folderlist and include.leafless) %}
+        leafless: {{include.leafless}}, folderlist: {{sortedpage.folderlist}}, dont_show_link: {{dont_show_link}}
         {% if dont_show_link == false %}  
           <li>HELLO 3</li>li>      
           <li><a href="{{ sortedpage.url }}">leafless: {{include.leafless}}, folderlist: {{sortedpage.folderlist}}, {{ sortedpage.url | replace: '/', ' ' | split:' ' | last | replace: '-', ' '  | remove: '.html' }}</a></li>
