--- a/_includes/leafless-recursive-subfolders.html
+++ b/_includes/leafless-recursive-subfolders.html
@@ -20,7 +20,7 @@
       {% assign subfolderdepth = sortedpage.location | split: "/" | size %}
 
       {% if sortedpage.location contains include.parentlocation and subfolderdepth == next_level and sortedpage.url != include.parenturl %}
-        {% if include.leafless and sortedpage.folderlist == false %}
+        {% if include.leafless and sortedpage.folderlist != true %}
           {% assign dont_show_link = true %}
         {% else %}
           {% assign dont_show_link = false %}
