--- a/_includes/leafless-recursive-subfolders.html
+++ b/_includes/leafless-recursive-subfolders.html
@@ -18,17 +18,14 @@
     {% comment %} recursion means we have to keep reassigning folderpath and next_level {% endcomment %}
       {% assign next_level = include.parentdepth | plus: 1 %}
       {% assign subfolderdepth = sortedpage.location | split: "/" | size %}
-
       {% if sortedpage.location contains include.parentlocation and subfolderdepth == next_level and sortedpage.url != include.parenturl %}
         {% if include.leafless and sortedpage.folderlist != true %}
           {% assign dont_show_link = true %}
         {% else %}
           {% assign dont_show_link = false %}
         {% endif %}
-
-        leafless: {{include.leafless}}, folderlist: {{sortedpage.folderlist}}, dont_show_link: {{dont_show_link}}
         {% if dont_show_link == false %} 
-          <li><a href="{{ sortedpage.url }}">leafless: {{include.leafless}}, folderlist: {{sortedpage.folderlist}}, {{ sortedpage.url | replace: '/', ' ' | split:' ' | last | replace: '-', ' '  | remove: '.html' }}</a></li>
+          <li><a href="{{ sortedpage.url }}">{{ sortedpage.url | replace: '/', ' ' | split:' ' | last | replace: '-', ' '  | remove: '.html' }}</a></li>
         {% endif %}
         {% if sortedpage.folderlist == true %}
           {% assign new_parentdepth = sortedpage.location | split: "/" | size %}
