--- a/_includes/sitemap.html
+++ b/_includes/sitemap.html
@@ -1,5 +1,5 @@
 <div>
 <br/>
 <br/>
-{% include recursive-subfolders.html parentlocation=page.location parenturl=page.url parentdepth=1 %} 
+{% include recursive-subfolders.html parentlocation=page.location parenturl=page.url parentdepth=1 leafless=false %} 
 </div>
