--- a/_includes/leafless-sitemap.html
+++ b/_includes/leafless-sitemap.html
@@ -1,5 +1,5 @@
 <div>
 <br/>
 <br/>
-{% include leafless-recursive-subfolders.html parentlocation=page.location parenturl=page.url parentdepth=1 leafless=true %} 
+{% include recursive-subfolders.html parentlocation=page.location parenturl=page.url parentdepth=1 leafless=true %} 
 </div>
