--- a/_includes/recursive-subfolders.html
+++ b/_includes/recursive-subfolders.html
@@ -30,7 +30,7 @@
         {% if sortedpage.folderlist == true %}
           {% assign new_parentdepth = sortedpage.location | split: "/" | size %}
           {% assign new_leafless = include.leafless %}
-          {% include leafless-recursive-subfolders.html parentlocation=sortedpage.location parenturl=sortedpage.url parentdepth=new_parentdepth leafless=new_leafless %}
+          {% include recursive-subfolders.html parentlocation=sortedpage.location parenturl=sortedpage.url parentdepth=new_parentdepth leafless=new_leafless %}
         {% endif %}
       {% endif %}
 
