--- a/_includes/head.html
+++ b/_includes/head.html
@@ -71,4 +71,14 @@
 	  	display: none;
 	  }
   </style>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-H36N4ZH37H"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-H36N4ZH37H');
+  </script>
 </head>
