Change the look of the search box so it doesn't look so weird if it ends up on the left again.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -47,13 +47,13 @@
     #index-box {
       float: right;
       border-style: solid;
-      border-width: 2px 0 2px 2px;
+      border-width: 2px 2px 2px 2px;
       font-size: 9pt;
       width: calc(280px - (30px * 2));
       box-sizing: border-box;
       padding-right: 0;
-      margin: 20px 0 20px 20px;
-      border-radius: 15px 0 0 15px;
+      margin: 20px 20px 20px 20px;
+      border-radius: 15px 15px 15px 15px;
       background-color: #F6F6F6;
     }
 
