Remove insistence on jekyll production env, to see if that fixes problems with Google Analytics.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -72,7 +72,7 @@
 	  }
   </style>
 
-{% if site.google_analytics and jekyll.environment == 'production' %}
+{% if site.google_analytics %}
 {% include analytics.html %}
 {% endif %}
 </head>
